2005-03-20  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Makefile: use www.tei-c.org.uk eXist server

2005-03-15  louburnard  <louburnard@spqr-ibm>

	* Source/MS/datable.odd:
	add dateAttrib attribute; rename conjecture attribute value

2005-03-05  louburnard  <louburnard@spqr-ibm>

	* Source/MS/finalrubric.odd, Source/MS/msitemstruct.odd, Source/ST/msitempart.odd:
	Add new components needed to support fully structured msItems in msdescription

	* Source/CO/author.odd, Source/CO/bibl.odd, Source/CO/listbibl.odd, Source/CO/note.odd, Source/CO/q.odd, Source/CO/respstmt.odd, Source/CO/title.odd, Source/MS/colophon.odd, Source/MS/deconote.odd, Source/MS/explicit.odd, Source/MS/filiation.odd, Source/MS/incipit.odd, Source/MS/ms.odd, Source/MS/mscontents.odd, Source/MS/msitem.odd, Source/MS/rubric.odd, Source/MS/textlang.odd, Source/ST/paragraph.odd, Source/ST/st.odd, fileents.dtd:
	Add msItemStruct and msItemPart class to maniuscript proposals (part 1) is

2005-03-01  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Makefile: explicitly set TEISERVER

2005-03-01  louburnard  <louburnard@spqr-ibm>

	* Source/MS/bindingdesc.odd, Source/MS/handnote.odd, Source/MS/recordhist.odd, Source/MS/repository.odd, Source/MS/summary.odd, Source/MS/altidentifier.odd, Source/CO/respstmt.odd, Source/CO/graphic.odd:
	last minute tidyup for msdescription; replace accidentally mislaid respstmt

2005-02-22  sbauman  <sbauman@spqr-ibm>

	* Source/CO/co.odd, Source/CO/resp.odd, p5odds-ex.odd, fileents.dtd:
	Straighten out the filenames and IDs of <resp> and <respStmt>.

	* Source/CO/biblitem.odd:
	Add <date> and <dateRange> as possible children of <biblItem>

	* Makefile:
	Ignore inappropriate xml:lang= errors from the first call to jing,
	too.

2005-02-20  Sebastian Rahtz  <rahtz@spqr-ibm>

	* ChangeLog: update changelog from CVS entries

2005-02-15  sbauman  <sbauman@spqr-ibm>

	* Source/CO/biblitem.odd:
	Changed gloss (again?), added <title> as a child, improved 1st xmp.
