@@ -1,3 +1,8 @@
+2005-03-29  Sebastian Rahtz  <rahtz@spqr-ibm>
+
+	* Makefile (install): add install target to Makefile, which copies
+	files to $PREFIX. Use www.tei-c.org/stylesheet for source of XSL for all jobs
+
 2005-03-20  Sebastian Rahtz  <rahtz@spqr-ibm>
 
 	* Makefile: use www.tei-c.org.uk eXist server
